--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DATABASE=eje
 PORT_DATABASE=5432
 HOST_DATABASE=ep-lingering-truth-a5cvayku.us-east-2.aws.neon.tech
 
+JWT_SEED=SG9sYSBtYW1hIGVzd695IHRyaXVuZmFuZ68gamVqZQ
+JWT_EXPIRE_IN=3h
+
